[gd_scene format=3 uid="uid://npxy3cyyhw6d"]

[ext_resource type="Script" uid="uid://bhh5owpss53w0" path="res://scripts/gameplay/interact/fish_eat.gd" id="1_5q8k6"]
[ext_resource type="Texture2D" uid="uid://cilr7yu6l1ia8" path="res://assets/story/routine/herring_eaten/herring_eat_0000.png" id="2_nli7l"]
[ext_resource type="Texture2D" uid="uid://brx31512siajx" path="res://assets/story/routine/herring_eaten/herring_eat_0001.png" id="3_vrn0u"]
[ext_resource type="Texture2D" uid="uid://dd6wmwv886u2y" path="res://assets/story/routine/herring_eaten/herring_eat_0002.png" id="4_wuqrn"]
[ext_resource type="Texture2D" uid="uid://bfceilxkwnv2k" path="res://assets/story/routine/herring_eaten/herring_eat_0003.png" id="5_jecxh"]
[ext_resource type="Texture2D" uid="uid://f0fiyve6dk3e" path="res://assets/story/routine/herring_eaten/herring_eat_0004.png" id="6_inrv8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5gb7q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nli7l")
}, {
"duration": 1.0,
"texture": ExtResource("3_vrn0u")
}, {
"duration": 1.0,
"texture": ExtResource("4_wuqrn")
}, {
"duration": 1.0,
"texture": ExtResource("5_jecxh")
}, {
"duration": 1.0,
"texture": ExtResource("6_inrv8")
}],
"loop": false,
"name": &"eating",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wr7b4"]
size = Vector2(236, 72)

[node name="Herring" type="Area2D" unique_id=2041283602]
script = ExtResource("1_5q8k6")

[node name="FishSprite" type="AnimatedSprite2D" parent="." unique_id=1905973757]
sprite_frames = SubResource("SpriteFrames_5gb7q")
animation = &"eating"
speed_scale = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1953058758]
shape = SubResource("RectangleShape2D_wr7b4")

[connection signal="mouse_entered" from="." to="." method="_mouse_enter"]
[connection signal="mouse_exited" from="." to="." method="_mouse_exited"]
